feat(*): Init web server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mock server with authentication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:nodemon": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,12 @@
   },
   "homepage": "https://github.com/melaineboue/MockServerAuth#readme",
   "dependencies": {
-    "express": "4.17.1"
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.5"
   }
 }
